# inav

./: .gitignore  AGENTS.md
cmake/: docker_build_sitl.sh  run_sitl_gazebo.sh  sitl.cmake
cmake/build_SITL/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake/build_SITL/src/: cmake_install.cmake
docs/: Mavlink.md  Settings.md
docs/SITL/: Airsim.md  SITL.md
docs/development/msp/: README.md  changelog.txt  inav_enums.json  inav_enums_ref.md  msp_messages.checksum  msp_messages.json  msp_ref.md
src/main/: CMakeLists.txt
src/main/cms/: cms_menu_osd.c
src/main/config/: config_streamer_file.c
src/main/drivers/: dshot.c  dshot.h  dshot_bitbang_decode.c
src/main/fc/: fc_core.c  fc_core.h  fc_init.c  fc_mavlink.c  fc_msp.c  fc_msp_box.c  rc_modes.c  rc_modes.h  runtime_config.c  runtime_config.h  settings.yaml
src/main/flight/: mixer.c  mixer.h  pid.c  pid_autotune.c
src/main/io/: gimbal_serial.c  ledstrip.c  osd.c  osd.h  osd_dji_hd.c  osd_hud.c  serial.c  serial.h
src/main/mavlink/: mavlink_command.c  mavlink_internal.h  mavlink_modes.c  mavlink_modes.h  mavlink_runtime.c  mavlink_runtime.h  mavlink_streams.c
src/main/msp/: msp_protocol_v2_inav.h
src/main/navigation/: navigation.c  navigation.h  navigation_private.h
src/main/programming/: logic_condition.c  logic_condition.h
src/main/rx/: crsf.c  crsf.h  fport.c  fport.h  fport2.c  fport2.h  ghst.c  ghst.h  ibus.c  ibus.h  jetiexbus.c  jetiexbus.h  mavlink.c  mavlink.h  (+10 more)
src/test/: CMakeLists.txt
src/test/unit/: CMakeLists.txt  mavlink_unittest.cc  rx_rx_unittest.cc
(+30 files in other folders)
